--- a/index.html
+++ b/index.html
@@ -42,5 +42,26 @@
             <p>El agente de chat se cargará aquí...</p>
         </div>
     </main>
+	
+	<script type='text/javascript'>
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+			embeddedservice_bootstrap.init(
+				'00Dak00000W9EHR',
+				'My_new_messagin_setting',
+				'https://jcardonp-agentdatackoud-dev-ed.develop.my.site.com/ESWMynewmessaginsettin1756851928185',
+				{
+					scrt2URL: 'https://jcardonp-agentdatackoud-dev-ed.develop.my.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
+</script>
+<script type='text/javascript' src='https://jcardonp-agentdatackoud-dev-ed.develop.my.site.com/ESWMynewmessaginsettin1756851928185/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 </body>
 </html>
