--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
 			embeddedservice_bootstrap.init(
-				'00Dak00000W9EHR',
-				'My_new_messagin_setting',
-				'https://jcardonp-agentdatackoud-dev-ed.develop.my.site.com/ESWMynewmessaginsettin1756851928185',
+				'00Dbm00000SSy4L',
+				'International_LLC_Motors_Channel',
+				'https://jcardonp-agentforce-dev-ed.develop.my.site.com/ESWInternationalLLCMoto1757017923171',
 				{
-					scrt2URL: 'https://jcardonp-agentdatackoud-dev-ed.develop.my.salesforce-scrt.com'
+					scrt2URL: 'https://jcardonp-agentforce-dev-ed.develop.my.salesforce-scrt.com'
 				}
 			);
 		} catch (err) {
@@ -58,7 +58,8 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://jcardonp-agentdatackoud-dev-ed.develop.my.site.com/ESWMynewmessaginsettin1756851928185/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://jcardonp-agentforce-dev-ed.develop.my.site.com/ESWInternationalLLCMoto1757017923171/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 		</div>
 	</main>
 </body>
