--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 </head>
 <body>
 	<header>
-		<h1>Bienvenido a Agentforce</h1>
-		<p>Tu asistente de chat en vivo está listo para ayudarte</p>
+		<h1>Welcome to Agentforce</h1>
+		<p>Your chat assitant for live chat is ready to help you.</p>
 	</header>
 	<main>
-		<h2>Inicia tu conversación</h2>
+		<h2>Start your conversation</h2>
 		<div class="chat-container">
 			<!-- Aquí se insertará el snippet de Live Agent -->
-			<p>El agente de chat se cargará aquí...</p>
+			<p>The agent will load soon...</p>
 			<script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
@@ -59,6 +59,7 @@
 	};
 </script>
 <script type='text/javascript' src='https://jcardonp-agentforce-dev-ed.develop.my.site.com/ESWInternationalLLCMoto1757017923171/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 
 		</div>
 	</main>
