--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
 			embeddedservice_bootstrap.init(
-				'00Dbm00000SSy4L',
-				'International_LLC_Motors_Channel',
-				'https://jcardonp-agentforce-dev-ed.develop.my.site.com/ESWInternationalLLCMoto1757017923171',
+				'00Dct000002sMdV',
+				'International_Agentforce_Channel',
+				'https://crmnav-nav--agentfrc.sandbox.my.site.com/ESWInternationalAgentfor1759417849537',
 				{
-					scrt2URL: 'https://jcardonp-agentforce-dev-ed.develop.my.salesforce-scrt.com'
+					scrt2URL: 'https://crmnav-nav--agentfrc.sandbox.my.salesforce-scrt.com'
 				}
 			);
 		} catch (err) {
@@ -58,7 +58,7 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://jcardonp-agentforce-dev-ed.develop.my.site.com/ESWInternationalLLCMoto1757017923171/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://crmnav-nav--agentfrc.sandbox.my.site.com/ESWInternationalAgentfor1759417849537/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
 
 		</div>
