--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
 			embeddedservice_bootstrap.init(
-				'00Dct000002sMdV',
+				'00DKY00000KEc4w',
 				'International_Agentforce_Channel',
-				'https://crmnav-nav--agentfrc.sandbox.my.site.com/ESWInternationalAgentfor1759417849537',
+				'https://pe1757096071689.my.site.com/ESWInternationalAgentfor1757443211141',
 				{
-					scrt2URL: 'https://crmnav-nav--agentfrc.sandbox.my.salesforce-scrt.com'
+					scrt2URL: 'https://pe1757096071689.my.salesforce-scrt.com'
 				}
 			);
 		} catch (err) {
@@ -58,7 +58,7 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://crmnav-nav--agentfrc.sandbox.my.site.com/ESWInternationalAgentfor1759417849537/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://pe1757096071689.my.site.com/ESWInternationalAgentfor1757443211141/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
 		</div>
 	</main>
